--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/vue-fontawesome": "^0.1.5",
     "cross-env": "^5.2.0",
     "nuxt": "^2.4.0",
+    "nuxt-fontawesome": "^0.4.0",
     "vuetify": "^1.5.5",
     "vuetify-loader": "^1.2.1"
   },
